# kusp

./: .gitignore  .pypi_readme.md  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  conf.py  example.md  index.rst  installation.md  introduction.md  jax_example.md  nequip_example.md  troubleshooting.md
example/: Si.xyz  client_ase.py  kusp_config.yaml  m3gnet.pt  m3gnet_2.pt  serve_matsciml_models.py
example/jax_example/: eval_jax_md.py
example/jax_example/KUSP_JAXSiSW__MO_111111111111_000/: @kusp_model_6ea42e7127c5b38b_KUSP_JAXSiSW__MO_111111111111_000.py  CMakeLists.txt  kusp_env.ast.env
example/lammps/: lmp_m3gnet.in  test_si.data
example/lammps/.ipynb_checkpoints/: lmp_m3gnet-checkpoint.in
example/lennard_jones/: lj.py  lj_optimized.py  lmp_lj.in  test_lj.py
example/lennard_jones/KUSP_lj__MO_111111111111_000/: @kusp_model_0793b0070a3c99ab_KUSP_lj__MO_111111111111_000.py  CMakeLists.txt  kusp_env.ast.env
example/nequip_example/: NequIPServer.py  README.md  eval_torch_nequip_kusp.py  kusp_config.yaml  lmp_nequip.in  native_nequip.py
example/nequip_example/KUSP_nequip__MO_111111111111_000/: @kusp_model_5e954c778d18b062_KUSP_nequip__MO_111111111111_000.py  CMakeLists.txt  deployed_nequip.pt  kusp_env.ast.env
kusp/: __init__.py  cli.py  install_kim_model.py  io.py  kusp.py  server.py  socket_serve.py  utils.py
kusp/KUSPPortableModel/: CMakeLists.txt  KUSPPortableModel.cpp  KUSPPortableModel.hpp  README.md  kimspec.edn
kusp/KUSP__MD_000000000000_000/: CMakeLists.txt  FileSystemGuard.cpp  FileSystemGuard.hpp  KUSPModel.cpp  KUSPModel.hpp  KUSPModelDriver.cpp  KUSPModelDriver.hpp  KUSPModelDriverImplementation.cpp  KUSPModelDriverImplementation.hpp  PythonUtils.cpp  PythonUtils.hpp  README.md  kimspec.edn  main.cpp  python_utils.cpp
kusp/KUSP__MD_000000000000_000/ext/: ext.md
kusp/KUSP__MD_000000000000_000/ext/yaml-cpp/: README.md
kusp/KUSP__MO_000000000000_000/: CMakeLists.txt  KUSPPortableModel.cpp  KUSPPortableModel.hpp  kimspec.edn
kusp/KUSP__MO_000000000000_000/yaml-cpp/: CMakeLists.txt  yaml-cpp-config.cmake.in
kusp/kim/: __init__.py  kim_install_artifacts.py  kim_remove_artifacts.py  kim_utils.py
