[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kusp"
#dynamic = ["version"]
version = "2.0.0"
description = "KUSP: KIM Utility for Serving Potentials"
authors = [
  { name = "Amit Gupta", email = "gupta839@umn.edu" },
]
readme = { file = ".pypi_readme.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
  "loguru",
  "numpy",
  "PyYAML",
  "click",
]

[project.urls]
Homepage = "https://github.com/openkim/kusp"

[project.scripts]
kusp = "kusp.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kusp", "kusp.*"]

[tool.setuptools.package-data]
kusp = [
  "KUSP__MO_000000000000_000/**/*",
  "KUSP__MO_000000000000_000/*",
  "KUSP__MO_000000000000_000/**/*.cpp",
  "KUSP__MO_000000000000_000/**/*.h",
  "KUSP__MD_000000000000_000/**/*",
  "KUSP__MD_000000000000_000/*",
  "KUSP__MD_000000000000_000/**/*.cpp",
  "KUSP__MD_000000000000_000/**/*.h",]

#[tool.setuptools.dynamic]
#version = { attr = "kusp.__version__.__version__" }
